--- a/src/app/modules/freelancer/freelancer.component.html
+++ b/src/app/modules/freelancer/freelancer.component.html
@@ -38,7 +38,7 @@
             </div>
           </div>       
 
-            <div class="container jobcontents" *ngFor="let JobPost of paginatedDataList  | jobsearch : searchTerm ">
+            <div class="container jobcontents" *ngFor="let JobPost of paginatedDataList | jobsearch : searchTerm;let i = index  ">
               <div class="row" >
               <div class="col-12">
                 <div class="row">
